k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coworkhub-ingress
  namespace: coworkhub
  labels:
    app: coworkhub
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  ingressClassName: nginx
  rules:
    - host: coworkhub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
